little cleanup not really

--- a/AllSetupsResults/MAPS HPC Colorado-FINALPICKLE ALL SETUPS.html
+++ b/AllSetupsResults/MAPS HPC Colorado-FINALPICKLE ALL SETUPS.html
@@ -14705,6 +14705,355 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 </div>
 
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[6]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">data</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+
+
+<div class="jp-OutputArea jp-Cell-outputArea">
+
+<div class="jp-OutputArea-child">
+
+    
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[6]:</div>
+
+
+
+<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html">
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>gid</th>
+      <th>setup</th>
+      <th>latitude</th>
+      <th>longitude</th>
+      <th>pitch</th>
+      <th>MonthStart</th>
+      <th>MonthEnd</th>
+      <th>ghi_sum</th>
+      <th>ResultPVWm2Front</th>
+      <th>ResultPVWm2Back</th>
+      <th>...</th>
+      <th>inside_normGHI</th>
+      <th>testbedA1_normGHI</th>
+      <th>testbedA2_normGHI</th>
+      <th>testbedA3_normGHI</th>
+      <th>testbedB1_normGHI</th>
+      <th>testbedB2_normGHI</th>
+      <th>testbedB3_normGHI</th>
+      <th>testbedC1_normGHI</th>
+      <th>testbedC2_normGHI</th>
+      <th>testbedC3_normGHI</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>389877</td>
+      <td>1</td>
+      <td>38.450001</td>
+      <td>-109.059998</td>
+      <td>5.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>87479</td>
+      <td>115183.601300</td>
+      <td>[8100.9732699999995, 7857.748389999999, 7806.4...</td>
+      <td>...</td>
+      <td>0.510281</td>
+      <td>0.431743</td>
+      <td>0.543984</td>
+      <td>0.551040</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>389881</td>
+      <td>1</td>
+      <td>38.290001</td>
+      <td>-109.059998</td>
+      <td>5.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>83447</td>
+      <td>108208.682089</td>
+      <td>[7731.925920000001, 7546.13574, 7469.28085, 75...</td>
+      <td>...</td>
+      <td>0.522845</td>
+      <td>0.434870</td>
+      <td>0.560560</td>
+      <td>0.568536</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>393321</td>
+      <td>1</td>
+      <td>40.849998</td>
+      <td>-108.900002</td>
+      <td>5.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>72545</td>
+      <td>92852.873450</td>
+      <td>[7146.276545000001, 6933.6987469999995, 6912.8...</td>
+      <td>...</td>
+      <td>0.526482</td>
+      <td>0.437867</td>
+      <td>0.554536</td>
+      <td>0.581539</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>393325</td>
+      <td>1</td>
+      <td>40.689999</td>
+      <td>-108.900002</td>
+      <td>5.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>73934</td>
+      <td>94779.507987</td>
+      <td>[7372.773784999999, 7101.775444, 7084.602393, ...</td>
+      <td>...</td>
+      <td>0.525179</td>
+      <td>0.447542</td>
+      <td>0.556978</td>
+      <td>0.566849</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>393329</td>
+      <td>1</td>
+      <td>40.529999</td>
+      <td>-108.900002</td>
+      <td>5.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>72555</td>
+      <td>93436.576578</td>
+      <td>[7082.0333, 6873.19812, 6805.714489999999, 685...</td>
+      <td>...</td>
+      <td>0.512656</td>
+      <td>0.458201</td>
+      <td>0.543016</td>
+      <td>0.534560</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>10765</th>
+      <td>557665</td>
+      <td>10</td>
+      <td>37.650002</td>
+      <td>-102.180000</td>
+      <td>8.6</td>
+      <td>1</td>
+      <td>1</td>
+      <td>87191</td>
+      <td>56150.344444</td>
+      <td>[46618.66, 46935.56, 47248.170000000006, 46271...</td>
+      <td>...</td>
+      <td>0.759724</td>
+      <td>0.861303</td>
+      <td>0.770624</td>
+      <td>0.754921</td>
+      <td>0.759889</td>
+      <td>0.743176</td>
+      <td>0.719794</td>
+      <td>0.708358</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>10766</th>
+      <td>557669</td>
+      <td>10</td>
+      <td>37.490002</td>
+      <td>-102.180000</td>
+      <td>8.6</td>
+      <td>1</td>
+      <td>1</td>
+      <td>87493</td>
+      <td>56790.327778</td>
+      <td>[44739.44999999999, 45182.23, 45621.16, 45239....</td>
+      <td>...</td>
+      <td>0.743714</td>
+      <td>0.754413</td>
+      <td>0.767952</td>
+      <td>0.753603</td>
+      <td>0.744723</td>
+      <td>0.749444</td>
+      <td>0.732078</td>
+      <td>0.703782</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>10767</th>
+      <td>557673</td>
+      <td>10</td>
+      <td>37.330002</td>
+      <td>-102.180000</td>
+      <td>8.6</td>
+      <td>1</td>
+      <td>1</td>
+      <td>87113</td>
+      <td>60055.417778</td>
+      <td>[39885.69, 40534.54, 41179.66, 41824.77, 43989...</td>
+      <td>...</td>
+      <td>0.739287</td>
+      <td>0.768760</td>
+      <td>0.777095</td>
+      <td>0.737291</td>
+      <td>0.747926</td>
+      <td>0.748803</td>
+      <td>0.713356</td>
+      <td>0.681780</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>10768</th>
+      <td>557677</td>
+      <td>10</td>
+      <td>37.169998</td>
+      <td>-102.180000</td>
+      <td>8.6</td>
+      <td>1</td>
+      <td>1</td>
+      <td>91388</td>
+      <td>63438.651111</td>
+      <td>[42318.58, 42800.36, 43278.35, 44418.62, 45064...</td>
+      <td>...</td>
+      <td>0.742749</td>
+      <td>0.769103</td>
+      <td>0.757633</td>
+      <td>0.766394</td>
+      <td>0.747309</td>
+      <td>0.752773</td>
+      <td>0.716786</td>
+      <td>0.689244</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>10769</th>
+      <td>557681</td>
+      <td>10</td>
+      <td>37.009998</td>
+      <td>-102.180000</td>
+      <td>8.6</td>
+      <td>1</td>
+      <td>1</td>
+      <td>87851</td>
+      <td>60391.766667</td>
+      <td>[41305.15, 41806.85, 42304.45, 43664.84, 44341...</td>
+      <td>...</td>
+      <td>0.748145</td>
+      <td>0.804306</td>
+      <td>0.782412</td>
+      <td>0.765023</td>
+      <td>0.755984</td>
+      <td>0.754544</td>
+      <td>0.711769</td>
+      <td>0.662974</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+  </tbody>
+</table>
+<p>10770 rows × 33 columns</p>
+</div>
+</div>
+
+</div>
+
+</div>
+
+</div>
+
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
